Security Changes for Projects

--- a/CoreSpringWebDemo/src/main/resources/application.properties
+++ b/CoreSpringWebDemo/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.resources.chain.strategy.fixed.version=v5
 
 server.compression.enabled=true
 server.compression.min-response-size=0
+
+security.user.name=sandeep
+security.user.password=sandeep
